--- a/practicle8.css
+++ b/practicle8.css
@@ -51,7 +51,7 @@ nav .nav-list .nav-link{
 
 /* img-container */
 section .img-container{
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("./images/clg2.jpg");
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("clg2.jpg");
     width: 100%;
     height: 100vh;
     background-size: cover;
